--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@ $(document).ready(function(){
         $('#paintingProducts1').append($ul3);
 	
 	  }else{
+		   $('<ul id="allprodList">').remove($(allProd1));
 		   $('#paintingProducts1').empty();
 	  }
        });
@@ -337,11 +338,11 @@ $(document).ready(function(){
                   allProd2   += '<li><div class="productImg"><img src="'+field4.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd2   += '<h4 class="title">'+field4.Title+'</h4>';
                   allProd2   += '<h5 class="category">'+field4.category+'</h5>';
-                  allProd2   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field4.price+'</p>';
-                  allProd2   += '<p class="desc" style="font-size:20px;">'+field4.Description+'</p>';
-                  allProd2   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field4.popularity+'</span>';
+                  allProd2   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field4.price+'</p>';
+                  allProd2   += '<p class="desc" style="font-size:14px;">'+field4.Description+'</p>';
+                  allProd2   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field4.popularity+'</span>';
                   allProd2   += '<br>';
-                  allProd2   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field4.onsale+'</span>';
+                  allProd2   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field4.onsale+'</span>';
                   allProd2   += '</li>';
 		
 	     }
@@ -364,11 +365,11 @@ $(document).ready(function(){
                   allProd3   += '<li><div class="productImg"><img src="'+field5.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd3   += '<h4 class="title">'+field5.Title+'</h4>';
                   allProd3   += '<h5 class="category">'+field5.category+'</h5>';
-                  allProd3   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field5.price+'</p>';
-                  allProd3   += '<p class="desc" style="font-size:20px;">'+field5.Description+'</p>';
-                  allProd3   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field5.popularity+'</span>';
+                  allProd3   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field5.price+'</p>';
+                  allProd3   += '<p class="desc" style="font-size:14px;">'+field5.Description+'</p>';
+                  allProd3   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field5.popularity+'</span>';
                   allProd3   += '<br>';
-                  allProd3   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field5.onsale+'</span>';
+                  allProd3   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field5.onsale+'</span>';
                   allProd3   += '</li>';
 		
 	     }
@@ -391,11 +392,11 @@ $(document).ready(function(){
                   allProd4   += '<li><div class="productImg"><img src="'+field6.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd4   += '<h4 class="title">'+field6.Title+'</h4>';
                   allProd4   += '<h5 class="category">'+field6.category+'</h5>';
-                  allProd4   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field6.price+'</p>';
-                  allProd4   += '<p class="desc" style="font-size:20px;">'+field6.Description+'</p>';
-                  allProd4   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field6.popularity+'</span>';
+                  allProd4   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field6.price+'</p>';
+                  allProd4   += '<p class="desc" style="font-size:14x;">'+field6.Description+'</p>';
+                  allProd4   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field6.popularity+'</span>';
                   allProd4   += '<br>';
-                  allProd4   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field6.onsale+'</span>';
+                  allProd4   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field6.onsale+'</span>';
                   allProd4   += '</li>';
 		
 	     }
@@ -418,11 +419,11 @@ $(document).ready(function(){
                   allProd5   += '<li><div class="productImg"><img src="'+field7.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd5   += '<h4 class="title">'+field7.Title+'</h4>';
                   allProd5   += '<h5 class="category">'+field7.category+'</h5>';
-                  allProd5   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field7.price+'</p>';
-                  allProd5   += '<p class="desc" style="font-size:20px;">'+field7.Description+'</p>';
-                  allProd5   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field7.popularity+'</span>';
+                  allProd5   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field7.price+'</p>';
+                  allProd5   += '<p class="desc" style="font-size:14px;">'+field7.Description+'</p>';
+                  allProd5   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field7.popularity+'</span>';
                   allProd5   += '<br>';
-                  allProd5   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field7.onsale+'</span>';
+                  allProd5   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field7.onsale+'</span>';
                   allProd5   += '</li>';
 		
 	     }
@@ -445,11 +446,11 @@ $(document).ready(function(){
                   allProd6   += '<li><div class="productImg"><img src="'+field8.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd6   += '<h4 class="title">'+field8.Title+'</h4>';
                   allProd6   += '<h5 class="category">'+field8.category+'</h5>';
-                  allProd6   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field8.price+'</p>';
-                  allProd6   += '<p class="desc" style="font-size:20px;">'+field8.Description+'</p>';
-                  allProd6   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field8.popularity+'</span>';
+                  allProd6   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field8.price+'</p>';
+                  allProd6   += '<p class="desc" style="font-size:14px;">'+field8.Description+'</p>';
+                  allProd6   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field8.popularity+'</span>';
                   allProd6  += '<br>';
-                  allProd6   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field8.onsale+'</span>';
+                  allProd6   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field8.onsale+'</span>';
                   allProd6   += '</li>';
 		
 	     }
@@ -472,11 +473,11 @@ $(document).ready(function(){
                   allProd7   += '<li><div class="productImg"><img src="'+field9.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd7   += '<h4 class="title">'+field9.Title+'</h4>';
                   allProd7   += '<h5 class="category">'+field9.category+'</h5>';
-                  allProd7   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field9.price+'</p>';
-                  allProd7   += '<p class="desc" style="font-size:20px;">'+field9.Description+'</p>';
-                  allProd7   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field9.popularity+'</span>';
+                  allProd7   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field9.price+'</p>';
+                  allProd7   += '<p class="desc" style="font-size:14px;">'+field9.Description+'</p>';
+                  allProd7   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field9.popularity+'</span>';
                   allProd7   += '<br>';
-                  allProd7   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field9.onsale+'</span>';
+                  allProd7   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field9.onsale+'</span>';
                   allProd7   += '</li>';
 		
 	     }
@@ -499,11 +500,11 @@ $(document).ready(function(){
                   allProd8   += '<li><div class="productImg"><img src="'+field10.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd8   += '<h4 class="title">'+field10.Title+'</h4>';
                   allProd8   += '<h5 class="category">'+field10.category+'</h5>';
-                  allProd8   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field10.price+'</p>';
-                  allProd8   += '<p class="desc" style="font-size:20px;">'+field10.Description+'</p>';
-                  allProd8   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field10.popularity+'</span>';
+                  allProd8   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field10.price+'</p>';
+                  allProd8   += '<p class="desc" style="font-size:14px;">'+field10.Description+'</p>';
+                  allProd8   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field10.popularity+'</span>';
                   allProd8   += '<br>';
-                  allProd8   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field10.onsale+'</span>';
+                  allProd8   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field10.onsale+'</span>';
                   allProd8   += '</li>';
 		
 	     }
@@ -526,11 +527,11 @@ $(document).ready(function(){
                   allProd9   += '<li><div class="productImg"><img src="'+field11.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd9   += '<h4 class="title">'+field11.Title+'</h4>';
                   allProd9   += '<h5 class="category">'+field11.category+'</h5>';
-                  allProd9   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field11.price+'</p>';
-                  allProd9   += '<p class="desc" style="font-size:20px;">'+field11.Description+'</p>';
-                  allProd9   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field11.popularity+'</span>';
+                  allProd9   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field11.price+'</p>';
+                  allProd9   += '<p class="desc" style="font-size:14px;">'+field11.Description+'</p>';
+                  allProd9   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field11.popularity+'</span>';
                   allProd9   += '<br>';
-                  allProd9   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field11.onsale+'</span>';
+                  allProd9   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field11.onsale+'</span>';
                   allProd9   += '</li>';
 		
 	     }
@@ -553,11 +554,11 @@ $(document).ready(function(){
                   allProd10   += '<li><div class="productImg"><img src="'+field12.imgPath+'" style="width:180px;height:180px;"/></div>';
                   allProd10   += '<h4 class="title">'+field12.Title+'</h4>';
                   allProd10   += '<h5 class="category">'+field12.category+'</h5>';
-                  allProd10   += '<p class="price" style="font-size:24px;"><b>Price:</b> $'+field12.price+'</p>';
-                  allProd10   += '<p class="desc" style="font-size:20px;">'+field12.Description+'</p>';
-                  allProd10   += '<span class="popularity"style="font-size:18px;"><b>Popularity: </b>'+field12.popularity+'</span>';
+                  allProd10   += '<p class="price" style="font-size:16px;"><b>Price:</b> $'+field12.price+'</p>';
+                  allProd10   += '<p class="desc" style="font-size:14px;">'+field12.Description+'</p>';
+                  allProd10   += '<span class="popularity"style="font-size:14px;"><b>Popularity: </b>'+field12.popularity+'</span>';
                   allProd10   += '<br>';
-                  allProd10   += '<span class="onsale"style="font-size:18px;"><b>OnSale Status: </b>'+field12.onsale+'</span>';
+                  allProd10   += '<span class="onsale"style="font-size:14px;"><b>OnSale Status: </b>'+field12.onsale+'</span>';
                   allProd10   += '</li>';
 		
 	     }
