--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ $(document).ready(function(){
 	     var allProd8 = '';
 	     var allProd9 = '';
 	     var allProd10 = '';
-	  
+	     
 	  //====1===//
 	   $("#checkbox1").click(function(){
            if (this.checked) {
@@ -319,14 +319,14 @@ $(document).ready(function(){
 		  return k < 20;   
 	     }
 		 
-		      var $ul3 = $('<ul id="allprodList">').append($(allProd1));// append DOM only one time.
+       var $ul3 = $('<ul id="allprodList">').append($(allProd1));// append DOM only one time.
         $('#paintingProducts1').append($ul3);
 	  
           });
 	
 	
 	  }else{
-		   $('<ul id="allprodList">').remove($(allProd1));
+		   $('#allprodList').remove($(allProd1));
 		   $('#paintingProducts1').empty();
 	  }
        });
