--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ $(document).ready(function(){
         $('#paintingProducts1').append($ul3);
 	
 	  }else{
-		   $('#allprodList').append($(allProd1));
+		   $('#allprodList').remove();
 		   $('#paintingProducts1').empty();
 	  }
        });
