--- a/index.html
+++ b/index.html
@@ -461,7 +461,8 @@ $(document).ready(function(){
 	var $ul8 = $('<ul id="allprodList">').append($(allProd6));// append DOM only one time.
         $('#paintingProducts6').append($ul8);
 	   
-	  }else{  allProd6='';	
+	  }else{ 
+		  allProd6='';	
 		  $('#paintingProducts6').empty();
 	       }
        });
