--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <h2>Products</h2>
                     <hr class="star-primary">
 		     <ul id="checkboxList"> <!--checkboxes-->
+		 Please tick the category of your choice by clicking on the checkboxes below
 			<li><input id="checkbox1" type="checkbox">Abstract</li>
 			<li><input id="checkbox2" type="checkbox">Still Life</li>
 			<li><input id="checkbox3" type="checkbox">Christmas</li>
