--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <div class="col-lg-12 text-center">
                     <h2>Products</h2>
                     <hr class="star-primary">
+			<p>Please tick the category of your choice by clicking on the checkboxes below</p>
 		     <ul id="checkboxList"> <!--checkboxes-->
-		 Please tick the category of your choice by clicking on the checkboxes below
 			<li><input id="checkbox1" type="checkbox">Abstract</li>
 			<li><input id="checkbox2" type="checkbox">Still Life</li>
 			<li><input id="checkbox3" type="checkbox">Christmas</li>
